--- a/SmartSpeech/src/main/res/layout/home_layout.xml
+++ b/SmartSpeech/src/main/res/layout/home_layout.xml
@@ -2,14 +2,21 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3020cc"
+    android:background="@android:color/white"
     android:orientation="vertical" >
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|left"
+        android:layout_margin="40dp"
+        android:src="@drawable/logo_ss_home" />
 
     <fragment
         android:id="@+id/viewer"
         android:name="com.changclamor.roomtosprout.smartspeech.fragments.decors.HomeFooterFragment"
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
 
     <LinearLayout
@@ -20,7 +27,14 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:id="@+id/home_buttons_container"
+            android:id="@+id/home_buttons_container_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+        </LinearLayout>
+        
+        <LinearLayout
+            android:id="@+id/home_buttons_container_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
