Added raw test json and have it working.

--- a/SmartSpeech/src/main/res/layout/home_layout.xml
+++ b/SmartSpeech/src/main/res/layout/home_layout.xml
@@ -20,8 +20,8 @@
         android:layout_gravity="bottom" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical" >
@@ -29,15 +29,49 @@
         <LinearLayout
             android:id="@+id/home_buttons_container_1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
             android:orientation="horizontal" >
+
+            <FrameLayout
+                android:id="@+id/large_tile_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <FrameLayout
+                android:id="@+id/large_tile_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
         </LinearLayout>
-        
+
         <LinearLayout
             android:id="@+id/home_buttons_container_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight=".5"
+            android:gravity="center"
             android:orientation="horizontal" >
+
+            <FrameLayout
+                android:id="@+id/small_tile_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <FrameLayout
+                android:id="@+id/small_tile_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <FrameLayout
+                android:id="@+id/small_tile_3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
         </LinearLayout>
     </LinearLayout>
 
