--- a/SmartSpeech/src/main/res/drawable/button_tile_selected.xml
+++ b/SmartSpeech/src/main/res/drawable/button_tile_selected.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="#ff000000" />
+        android:color="#000000" />
 
     <corners
         android:bottomLeftRadius="7dp"
