--- a/SmartSpeech/src/main/res/values/view.xml
+++ b/SmartSpeech/src/main/res/values/view.xml
@@ -2,5 +2,7 @@
 
     <integer name="card_flip_time_half">300</integer>
     <integer name="card_flip_time_full">600</integer>
+    <integer name="pop_time">500</integer>
+    <integer name="pop_start_delay_max">500</integer>
 
 </resources>
