--- a/SmartSpeech/src/main/res/layout/sentence_layout.xml
+++ b/SmartSpeech/src/main/res/layout/sentence_layout.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp" >
+    android:layout_height="fill_parent" >
 
     <View
+        android:id="@+id/main_container"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="100dp"
         android:background="#EEEEEE" />
 
 </FrameLayout>
