--- a/SmartSpeech/src/main/res/layout/sentence_layout.xml
+++ b/SmartSpeech/src/main/res/layout/sentence_layout.xml
@@ -3,12 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent" >
 
-    <View
+    <LinearLayout
         android:id="@+id/main_container"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:layout_gravity="bottom"
         android:layout_marginTop="100dp"
-        android:background="#EEEEEE" />
+        android:background="#EEEEEE"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000" />
+    </LinearLayout>
 
 </FrameLayout>
