--- a/SmartSpeech/src/main/res/layout/workplace_layout.xml
+++ b/SmartSpeech/src/main/res/layout/workplace_layout.xml
@@ -13,7 +13,6 @@
         android:id="@+id/bottom_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="#ABAB00" />
+        android:layout_gravity="bottom" />
 
 </FrameLayout>
