--- a/SmartSpeech/src/main/res/layout/word_view.xml
+++ b/SmartSpeech/src/main/res/layout/word_view.xml
@@ -5,13 +5,20 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000" />
+        android:fontFamily="sans-serif"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:textColor="#000000"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/del_button"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="top|right"
-        android:background="#0020CC" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#AAAAAA"
+        android:fontFamily="sans-serif-condensed"
+        android:text="Delete"
+        android:textColor="#FFFFFF"
+        android:textSize="10sp" />
 
 </merge>
