--- a/SmartSpeech/src/main/res/layout/sentence_layout.xml
+++ b/SmartSpeech/src/main/res/layout/sentence_layout.xml
@@ -1,30 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    xmlns:f="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+
+    <com.changclamor.roomtosprout.smartspeech.ui.FlowLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/sentence_main_container"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        f:horizontalSpacing="6dip"
+        f:verticalSpacing="12dip" >
+    </com.changclamor.roomtosprout.smartspeech.ui.FlowLayout>
 
     <LinearLayout
-        android:id="@+id/main_container"
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="100dp"
-        android:background="#EEEEEE"
+        android:layout_height="wrap_content"
         android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/sentence_clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Clear" />
+
+        <Button
+            android:id="@+id/sentence_speak_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Speak" />
+
+        <Button
+            android:id="@+id/sentence_speak_button_sad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Speak Sad" />
+
+        <Button
+            android:id="@+id/sentence_speak_button_angry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Speak Angry" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/clear_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:text="Clear" />
-
-    <Button
-        android:id="@+id/speak_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:text="Speak" />
-
-</LinearLay>
+</LinearLayout>
