--- a/SmartSpeech/src/main/res/layout/workplace_layout.xml
+++ b/SmartSpeech/src/main/res/layout/workplace_layout.xml
@@ -15,4 +15,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/workplace_home_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circle_alpha"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Home"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </FrameLayout>
