--- a/SmartSpeech/src/main/res/values/attrs.xml
+++ b/SmartSpeech/src/main/res/values/attrs.xml
@@ -1,12 +1,22 @@
 <resources>
 
-    <!-- Declare custom theme attributes that allow changing which styles are
+    <!--
+         Declare custom theme attributes that allow changing which styles are
          used for button bars depending on the API level.
          ?android:attr/buttonBarStyle is new as of API 11 so this is
-         necessary to support previous API levels. -->
+         necessary to support previous API levels.
+    -->
     <declare-styleable name="ButtonBarContainerTheme">
         <attr name="buttonBarStyle" format="reference" />
         <attr name="buttonBarButtonStyle" format="reference" />
+    </declare-styleable>
+    <declare-styleable name="FlowLayout">
+        <attr name="horizontalSpacing" format="dimension" />
+        <attr name="verticalSpacing" format="dimension" />
+    </declare-styleable>
+    <declare-styleable name="FlowLayout_LayoutParams">
+        <attr name="layout_breakLine" format="boolean" />
+        <attr name="layout_horizontalSpacing" format="dimension" />
     </declare-styleable>
 
 </resources>
