--- a/SmartSpeech/src/main/res/layout/workplace_layout.xml
+++ b/SmartSpeech/src/main/res/layout/workplace_layout.xml
@@ -11,6 +11,7 @@
 
     <FrameLayout
         android:id="@+id/bottom_container"
+        android:background="#FFFFFF"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
