--- a/SmartSpeech/src/main/res/layout/home_layout.xml
+++ b/SmartSpeech/src/main/res/layout/home_layout.xml
@@ -74,4 +74,21 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/circle_alpha"
+        android:gravity="center"
+        android:orientation="vertical" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Repeat"
+            android:textColor="#000000" >
+        </TextView>
+    </LinearLayout>
+
 </FrameLayout>
